Note that placeholder substitutions are not made on JWT claim values

--- a/cgi/index.html
+++ b/cgi/index.html
@@ -257,7 +257,7 @@ HTTP_TOKEN_CLAIM_ADMIN=true
 </code></pre>
 
 <p>All values are conveyed as strings, so some conversion may be necessary in your
-program.</p>
+program. No placeholder substitutions are made on these values.</p>
 
 <h3>Environment Variable Example</h3>
 
