--- a/cgi/index.html
+++ b/cgi/index.html
@@ -174,7 +174,7 @@ directive syntax described below.</p>
 
 <p>The values used for the script name and its arguments are subject to
 placeholder replacement. In addition to the standard Caddy placeholders such as
-<code>{method}</code> and <code>{host}</code>, the following placeholders substitutions are made:</p>
+<code>{method}</code> and <code>{host}</code>, the following placeholder substitutions are made:</p>
 
 <ul>
 <li><strong>{.}</strong> is replaced with Caddy&rsquo;s current working directory</li>
