--- a/cgi/index.html
+++ b/cgi/index.html
@@ -251,7 +251,7 @@ with the <code>match</code> subdirective. Any request that matches a <code>match
 then checked with the patterns in <code>except</code>, if any. If any matches are made
 with the <code>except</code> pattern, the request is rejected.</p>
 
-<p>The empty_env subdirective is used to pass one or more empty environment
+<p>The <code>empty_env</code> subdirective is used to pass one or more empty environment
 variables. Some CGI scripts may expect the server to pass certain empty
 variables rather than leaving them unset. This subdirective allows you to deal
 with those situations.</p>
