--- a/pubsub/index.html
+++ b/pubsub/index.html
@@ -220,12 +220,12 @@ receive a random name like &ldquo;user_42&rdquo; the first time you publish an e
 <li><p>On each open page, click the &ldquo;Run&rdquo; button and then the &ldquo;Start&rdquo; button.
 Simulate the publication of events by clicking the &ldquo;A&rdquo;, &ldquo;B&rdquo;, and &ldquo;C&rdquo; buttons
 from various devices or tab pages. These events will sent to the web server
-and dispatched to all subscribing pages. These events will be displayed at
+and dispatched to all subscribing pages. These events will be displayed
 beneath the buttons in a list.</p></li>
 </ul>
 
 
-<h2>Using pubsub in you own web applications</h2>
+<h2>Using pubsub in your own web applications</h2>
 
 <p>The JavaScript file ps.js is included in the example shown above. This script
 may be included in a web page with the following line:</p>
