Reformat code blocks

--- a/cgi/index.html
+++ b/cgi/index.html
@@ -44,10 +44,9 @@
     }
     
     pre {
-      color: #ddd;
-      background-color: #444;
-      margin: 1em 0;
-      padding: 0.25em 0.5em;
+      margin: 1.5em 0;
+      background-color: #e8e8e8;
+      padding: 1em;
       overflow-x: scroll;
     }
   </style>
