Include doc as target of all in Makefile

--- a/pubsub/index.html
+++ b/pubsub/index.html
@@ -205,9 +205,9 @@ Alternatively, open a number of tabs in a single browser and point them to the
 server.</p></li>
 <li><p>On each open page, click the &ldquo;Configure&rdquo; button and make appropriate changes.
 Most fields, such as &ldquo;Auth password&rdquo; and &ldquo;URL&rdquo; are pre-filled to match the
-values in the sample Caddyfile shown above. You may enter a name in the
-&ldquo;Publisher name&rdquo; field or leave it empty. A blank value will be replaced with a
-random name like &ldquo;user_42&rdquo; the first time you publish an event.</p></li>
+values in the sample Caddyfile. You may enter a name in the &ldquo;Publisher name&rdquo;
+field or leave it empty. A blank value will be replaced with a random name like
+&ldquo;user_42&rdquo; the first time you publish an event.</p></li>
 <li><p>On each open page, click the &ldquo;Run&rdquo; button and then the &ldquo;Start&rdquo; button.
 Simulate the publication of events by clicking the &ldquo;A&rdquo;, &ldquo;B&rdquo;, and &ldquo;C&rdquo; buttons
 from various devices or tab pages. These events will be sent to the web server
