--- a/pubsub/index.html
+++ b/pubsub/index.html
@@ -61,11 +61,11 @@
 <a href="https://goreportcard.com/report/github.com/jung-kurt/caddy-pubsub"><img src="https://goreportcard.com/badge/github.com/jung-kurt/caddy-pubsub" alt="Report" /></a></p>
 
 <p>This plugin lets you easily push event notifications to any practical number of
-web clients. To publish an event, content that includes a category and body is
-posted to the &ldquo;publish&rdquo; URL configured in the Caddyfile. To subscribe to
-published events, a web client simply connects to the &ldquo;subscribe&rdquo; URL
-configured in the Caddyfile. This connection can be managed by including the
-small, dependency-free file ps.js in your web application and using the
+web clients. To publish an event, post content that includes a category and
+body to the &ldquo;publish&rdquo; URL configured in the Caddyfile. To subscribe to
+published events, simply connect your web client to the &ldquo;subscribe&rdquo; URL
+configured in the Caddyfile. To manage the subscription connection, include the
+small, dependency-free file ps.js in your web application and use the
 non-blocking methods of a Subscriber instance.</p>
 
 <p>This plugin uses longpolling (specifically, <a href="https://github.com/jcuga/golongpoll">golongpoll</a>) to connect
