Include prefix in index.html

--- a/cgi/index.html
+++ b/cgi/index.html
@@ -61,6 +61,9 @@
 <a href="https://travis-ci.org/jung-kurt/caddy-cgi"><img src="https://travis-ci.org/jung-kurt/caddy-cgi.svg?branch=master" alt="Build Status" /></a>
 <a href="https://goreportcard.com/report/github.com/jung-kurt/caddy-cgi"><img src="https://goreportcard.com/badge/github.com/jung-kurt/caddy-cgi" alt="Report" /></a></p>
 
+<p>Package cgi implements the common gateway interface (<a href="https://en.wikipedia.org/wiki/Common_Gateway_Interface">CGI</a>) for
+<a href="https://caddyserver.com/">Caddy</a>, a modern, full-featured, easy-to-use web server.</p>
+
 <p>This plugin lets you generate dynamic content on your website by means of
 command line scripts. To collect information about the inbound HTTP request,
 your script examines certain environment variables such as
