--- a/pwa/index.html
+++ b/pwa/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Minimal PWA</title>
-    <link rel="apple-touch-icon" href="min-pwa-192.png">
+    <link rel="apple-touch-icon" href="min-pwa.png">
     <meta name="theme-color" content="#404040" />
     <meta content="Minimal progressive web app" name="Description" />
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
